Fixed responsiveness on small screens

--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ body
 	grid-template-columns: repeat(2, 1fr);
 	gap: 0.5rem;
 }
+@media (max-width: 720px)
+{
+	.answers
+	{
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
 .answers .answer
 {
 	padding: 1rem;
